[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/sprites.png" type="Texture" id=1]
[ext_resource path="res://Game/Grid/TilesPreview.gd" type="Script" id=2]
[ext_resource path="res://Game/GUI/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Grid/Tiles.gd" type="Script" id=4]
[ext_resource path="res://Game/Main/Camera.gd" type="Script" id=5]
[ext_resource path="res://Game/Main/Game.gd" type="Script" id=6]
[ext_resource path="res://Game/Grid/Outline.gd" type="Script" id=7]
[ext_resource path="res://Game/Main/Expansions.gd" type="Script" id=8]
[ext_resource path="res://Game/Tutorial/Tutorial.tscn" type="PackedScene" id=10]

[sub_resource type="TileSet" id=1]
0/name = "sprites.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "sprites.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 65, 65, 65 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "sprites.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 130, 65, 65 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "sprites.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 195, 65, 65 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "sprites.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 71, -1, 65, 102 )
4/tile_mode = 2
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 32, 32 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[node name="Game" type="Node"]
script = ExtResource( 6 )

[node name="Main" type="Node" parent="."]

[node name="Expansions" type="Node" parent="Main"]
script = ExtResource( 8 )

[node name="Camera" type="Camera2D" parent="Main"]
anchor_mode = 0
current = true
script = ExtResource( 5 )

[node name="Grid" type="Node" parent="Main/Camera"]

[node name="Tiles" type="TileMap" parent="Main/Camera/Grid"]
tile_set = SubResource( 1 )
format = 1
script = ExtResource( 4 )

[node name="TilesPreview" type="TileMap" parent="Main/Camera/Grid"]
tile_set = SubResource( 1 )
format = 1
script = ExtResource( 2 )

[node name="Outline" type="Node2D" parent="Main/Camera/Grid"]
script = ExtResource( 7 )

[node name="Tutorial" parent="Main/Camera" instance=ExtResource( 10 )]
unique_name_in_owner = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="GUI" parent="GUI" instance=ExtResource( 3 )]

[node name="ErrorCanvas" type="CanvasLayer" parent="."]
layer = 6

[node name="Tint" type="ColorRect" parent="ErrorCanvas"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.921569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorText" type="AcceptDialog" parent="ErrorCanvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -29.0
margin_right = 124.5
margin_bottom = 87.0
rect_min_size = Vector2( 166, 116 )
popup_exclusive = true
window_title = ""
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_clicked" from="." to="." method="_on_Game_button_clicked"]
[connection signal="cell_clicked" from="." to="." method="_on_Game_cell_clicked"]
[connection signal="cell_right_clicked" from="." to="." method="_on_Game_cell_right_clicked"]
[connection signal="expansion_button_clicked" from="." to="." method="_on_Game_expansion_button_clicked"]
[connection signal="cell_click" from="Main/Camera/Tutorial" to="Main/Camera/Tutorial" method="_on_Tutorial_cell_click"]
[connection signal="game_button_click" from="Main/Camera/Tutorial" to="Main/Camera/Tutorial" method="_on_Tutorial_game_button_click"]
[connection signal="release_right_click" from="Main/Camera/Tutorial" to="Main/Camera/Tutorial" method="_on_Tutorial_release_right_click"]
[connection signal="confirmed" from="ErrorCanvas/ErrorText" to="." method="_on_ErrorText_confirmed"]
